# mechaland-be

./: README.md  manage.py  pyproject.toml  requirements.txt
adminpage/: urls.py  views.py
adminpage/templates/: delete.html  featured-collection.html  forms-change.html  forms.html  heroimg.html  index.html  interest-check.html  product-image.html  product-specs.html  product-variant.html  product.html  sign-in.html  sign-up.html  updates.html
adminpage/templates/accounts/: login.html  register.html
adminpage/templates/includes/: footer.html  navigation.html  scripts.html  sidebar.html
adminpage/templates/layouts/: base-fullscreen.html  base.html
api/: settings.py  urls.py
authadmin/: apps.py  views.py
mechaland/: admin.py  apps.py  forms.py  models.py  serializers.py  views.py
mechaland/migrations/: 0001_initial.py  0002_alter_heroimage_image.py  0003_alter_heroimage_image.py  0004_alter_interestcheck_image.py  0005_auto_20220920_1209.py
staticfiles/: staticfiles.json
