[tool.poetry]
name = "mechaland-be"
version = "0.1.0"
description = "Mechaland"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.8.10"
Django = "3.2.2"
djangorestframework = "3.13.1"
django-cors-headers = "3.11.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
